# freedom-policy

./: .gitignore  PARADIGM.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
dos_freedom/: __init__.py  conflict.py  consent.py  freedom.py  ownership.py
tests/: test_conflict.py  test_theory.py
