[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "freedom-policy"
version = "0.1.0"
description = "The Theory of Freedom's operational core (Rights Ontology, Ownership Registry, Consent Logic, Freedom Verifier) implemented as policy on the value-neutral decision-os-min kernel. The kernel is not modified."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "PolyForm-Noncommercial-1.0.0" }
authors = [{ name = "Ali Pourrahim" }, { name = "Mohammad Ali Jannat Khah Doust (theory, CC BY 4.0)" }]
dependencies = ["decision-os-min"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.11"]

[tool.setuptools]
packages = ["dos_freedom"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
