[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "freedom-policy"
version = "0.1.0"
description = "The Theory of Freedom's operational core (Rights Ontology, Ownership Registry, Consent Logic, Freedom Verifier) implemented as policy on the value-neutral decision-os-min kernel. The kernel is not modified."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "PolyForm-Noncommercial-1.0.0" }
authors = [{ name = "Ali Pourrahim" }, { name = "Mohammad Ali Jannat Khah Doust (theory, CC BY 4.0)" }]
dependencies = ["decision-os-min"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.11"]

[tool.setuptools]
packages = ["dos_freedom"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501", "E702"]

[tool.mypy]
python_version = "3.11"
# decision-os-min is an external sibling package with no published type stubs;
# it is installed from git in CI. Missing-import errors from it are not our concern.
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
